# data_registration_pcl

./: .gitignore  CMakeLists.txt
include/dataFramework/: data_model.hpp  viewerLog.hpp
src/: compute_normals.cpp  elch.cpp  elch_viewer.cpp  filtering.cpp  get_scan_name.cpp  histogram_error_viewer.cpp  icp.cpp  icp_overlap_viewer.cpp  lum.cpp  lum_viewer.cpp  model_viewer.cpp  ndt.cpp  nn_overlap_plot.cpp  ortho_viewer.cpp  residuum_viewer.cpp  result_plot.cpp  subsampling.cpp  trajectory_viewer.cpp
src/dataFramework/: data_model.cpp  viewerLog.cpp
windows_bat/: filtering_hannover2.bat  hannover_model_filtered.xml
